--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h3>Create a toy!</h3>
 
         <input
+          id = 'nameId'
           type="text"
           name="name"
           value=""
@@ -26,6 +27,7 @@
         />
         <br />
         <input
+          id = 'imageURLId'
           type="text"
           name="image"
           value=""
